--- a/main.html
+++ b/main.html
@@ -3,18 +3,16 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <!-- the entire body must be written by student -->
+  <script type="text/javascript" src="./script.js"></script>
 
-   <ul id="bands">
-   </ul>
-	   
-	
+  <ul id="bands">
+  </ul>
+
 </body>
 
 </html>
